# c_project_template

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/include/mylib/: mylib.h
src/src/: mylib.c
tests/: CMakeLists.txt  mylib_test.cpp  run_all_tests.cpp
